# egit

./: README.md  install.ps1  install.py  install.sh  pyproject.toml  requirements.txt  setup.py
DEV_DOCS/: AI_Prompts.md  Planning.md
docs/DEV_DOCS/: AI_Prompts.md  qa.md
docs/USER_DOCS/: README.md  advanced-usage.md  basic-commands.md  configuration.md  getting-started.md  troubleshooting.md
egit/: __init__.py  cli.py  config.py  db.py  docker.py  git.py  llm.py
tests/: conftest.py  requirements-test.txt  test_cli.py  test_git.py  test_llm.py
